tests/reject/notfifteen.ul
void print Stuff(){

	print "if you can dodge a wrench you can dodge a ball";
	return;
}
